# TDS_suelo

./: .gitignore  README.md  pyproject.toml
docs/: 00_concepto_tds_suelo.md  01_plan_implementacion.md  02_pipeline_observado.md
src/tsd_suelo/: __init__.py  atlas.py  cli.py  config.py  etl.py  faults.py  flatfiles.py  forward.py  geometry.py  graph.py  h5_targets.py  latent.py  logging_utils.py  mask.py  pipeline.py  report.py  residuals.py  server.py  spatial_grid.py  spectral.py  ultrametric.py  utils.py
tests/: test_geometry.py  test_pipeline_smoke.py  test_server.py
