[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsd-suelo"
version = "0.1.0"
description = "TSD-Suelo: ETL observado y descubrimiento multiescala fuente-ruta-receptor desde H5 y flatfiles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py>=3.10",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tsd-suelo = "tsd_suelo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

